--- a/pages/leg.html
+++ b/pages/leg.html
@@ -60,7 +60,7 @@
               We ask all <br> CORPORATIONS to...
              </p>
              <p style = "margin-right: 5em; margin-left: 37em; margin-top:50px; text-align: left; font-size: 30px; text-indent: 100px;"> 
-                ...engage with your government representatives to ensure that they keep sustainability in mind throughout their term, and to ask them to manage waste in a transparent & accountable manner. We also ask individuals to use their power as consumers to rely less on single-use plastics and consider investing in eco-friendly alternatives.
+              ...
              </p>
         </div><hr>
        <div class="clearfix">
@@ -69,7 +69,7 @@
               We ask all <br> GOVERNMENTS to...
              </p>
              <p style = "margin-left: 5em; margin-right: 37em; margin-top:50px; text-align: left; font-size: 30px; text-indent: 100px;"> 
-                ...engage with your government representatives to ensure that they keep sustainability in mind throughout their term, and to ask them to manage waste in a transparent & accountable manner. We also ask individuals to use their power as consumers to rely less on single-use plastics and consider investing in eco-friendly alternatives.
+              ...establish <b>national targets</b></national> for sustainability measures to reduce pollutant output, and to <b>incentivize industries</b> to incorporate more recycled plastics. We also ask governments to work at closely with subnational levels to ensure that our communities are adhering to new sustainability standards. 
              </p>
         </div><hr>
         <div class="clearfix">
@@ -79,7 +79,7 @@
            We ask YOU to...
           </p>
           <p style = "margin-right: 5em; margin-left: 37em; margin-top:50px; text-align: left; font-size: 30px; text-indent: 100px;"> 
-             ...engage with your government representatives to ensure that they keep sustainability in mind throughout their term, and to ask them to manage waste in a transparent & accountable manner. We also ask individuals to use their power as consumers to rely less on single-use plastics and consider investing in eco-friendly alternatives.
+             ...<b>engage</b> with your government representatives to ensure that they keep sustainability in mind throughout their term, and to ask them to manage waste in a transparent & accountable manner. We also ask individuals to use their power as consumers to rely less on single-use plastics and consider investing in <b>eco-friendly alternatives</b>.
           </p>
         </div>
     </div>
