css change team

--- a/pages/team.html
+++ b/pages/team.html
@@ -40,9 +40,11 @@
         </div>
 
     <div class="content">
-        <h1 style="text-align: center; font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 250%">Hi, We're the Ocean Pollution Posse.</h1> <br>
+        <h1 style="text-align: center; font-size: 80px;  font-family: 'Montserrat', sans-serif;
+        font-weight: 800; letter-spacing: -2px; margin-top: 100px; margin-bottom: -10px; color: rgb(0, 38, 88);">
+          Hi, We're the Ocean Pollution Posse.</h1> <br>
 
-        <h3 style = "font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px; text-align: left;">
+        <h3 style = "font-size: 25px; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px; text-align: left;">
           Our mission this quarter is to analyze plastic pollutants in the ocean.
              According to George Leonard, the chief scientist at the Ocean Conservancy,
               “At least half of [...ocean plastic waste] is not consumer plastics,
@@ -50,41 +52,45 @@
                This fact surprised our team and inspired us to look deeper into the connection
                 between the fishing industry and plastic in the ocean.</h3>
         <br>
-        <h2 style="text-align: center;  font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 200%; margin-bottom: 5%;">Meet the Team!</h2>
+        <h2 style="text-align: center; font-size: 50px;  font-family: 'Montserrat', sans-serif;
+        font-weight: 800; letter-spacing: -2px; margin-top: 5%; margin-bottom: 7% ; color: rgb(0, 38, 88);">
+          Meet the Team!</h2>
         <div class="clearfix">
-        <img align="left" style = "float: left; margin-left: 5%; margin-right: 5%; margin-bottom: 5%;"  width="200" src="../photos/kelseyselfiesmall_img.jpg">
-        <h3 style = "text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
+        <img align="left" style = "float: left; margin-right: 5%; margin-bottom: 5%;"  width="200" src="../photos/kelseyselfiesmall_img.jpg">
+        <h3 style = "font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
           Hi, I'm Julia Wood and I will be the data visualization specialist for our team.
           I will also conduct data analysis and help put our website together.
           I am really looking forward to working on this project because I am passionate
            about protecting our oceans and uncovering spatial trends using web mapping! </h3> </div>
         <div class="clearfix">
-        <img align="left" style = "float: left; margin-left: 5%; margin-right: 5%; margin-bottom: 5%;" width="200" src="../photos/me2.jpg">
-        <h3 style = "text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">I'm Eli and I will be the web specialist for our team.
+        <img align="left" style = "float: left; margin-right: 5%; margin-bottom: 5%;" width="200" src="../photos/me2.jpg">
+        <h3 style = "font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">I'm Eli and I will be the web specialist for our team.
              I will be managing the functionality of our site, writing and reviewing code, 
              and helping out the team with other aspects of the project as needed.</h3>
         </div>
         <div class="clearfix">
-        <img align="left" style = "float: left; margin-left: 5%; margin-right: 5%; margin-bottom: 5%;" width="200" src="../photos/IMG_2368.jpg">
-        <h3 style = "text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
+        <img align="left" style = "float: left;  margin-right: 5%; margin-bottom: 5%;" width="200" src="../photos/IMG_2368.jpg">
+        <h3 style = " font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
             Hello! I'm Derek and I will be the UX designer for our team.
              In addition to designing the site, I plan to help construct
               a compelling narrative and plan to implement Python interactive
                mapping knowledge from DH140. I hope to discover exciting, new findings with the team!</h3>
         </div>
         
-        <h2 style="text-align: center;  font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 200%; margin-bottom: 5%;">
-          Project Overview</h2>
-        <h3 style = "text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
+        <h2 style="text-align: center; font-size: 50px;  font-family: 'Montserrat', sans-serif;
+        font-weight: 800; letter-spacing: -2px; margin-top: 5%; margin-bottom: 7% ; color: rgb(0, 38, 88);">
+        Project Overview
+        </h2>
+        <h3 style = " font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
           In recent years, individuals have been switching out their water bottles and plastic bags
              for resuable alternatives. More and more people are aware of their personal impact on the
               environment and actively work to minimize their carbon footprint. 
-        <br>
+
         However, what many people do not know is that the fishing industry is
          the biggest contributor of large plastics in the ocean, with fishing gear
           making up about "70 percent of plastics more than 20 centimeters (approximately 8 inches)
            large floating on the ocean's surface" (Greenpeace).
-        <br>
+   
         Our team aims to investigate international fishing patterns and fishing activity translates
          to plastic pollution in our oceans.</h3>
        
