--- a/pages/team.html
+++ b/pages/team.html
@@ -45,12 +45,10 @@
           Hi, We're the Ocean Pollution Posse.</h1> <br>
 
         <h3 style = "font-size: 25px; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px; text-align: left;">
-          Our mission this quarter is to analyze plastic pollutants in the ocean.
-             According to George Leonard, the chief scientist at the Ocean Conservancy,
-              “At least half of [...ocean plastic waste] is not consumer plastics,
-               which are central to much of the current debate, but fishing gear.” 
-               This fact surprised our team and inspired us to look deeper into the connection
-                between the fishing industry and plastic in the ocean.</h3>
+             Our mission this quarter is to analyze which countries are polluting the most plastic into our oceans. 
+             We hope to also find out whether there is a relationship between Gross Domestic Product (GDP) and the amount of mismanaged plastic waste. 
+             By discovering which countries are the greatest contributors, we can then learn about why that is and what steps can be done to either reduce plastic pollution or manage plastic waste properly.
+              </h3>
         <br>
         <h2 style="text-align: center; font-size: 50px;  font-family: 'Montserrat', sans-serif;
         font-weight: 800; letter-spacing: -2px; margin-top: 5%; margin-bottom: 7% ; color: rgb(0, 38, 88);">
@@ -82,17 +80,7 @@
         Project Overview
         </h2>
         <h3 style = " font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
-          In recent years, individuals have been switching out their water bottles and plastic bags
-             for resuable alternatives. More and more people are aware of their personal impact on the
-              environment and actively work to minimize their carbon footprint. 
-
-        However, what many people do not know is that the fishing industry is
-         the biggest contributor of large plastics in the ocean, with fishing gear
-          making up about "70 percent of plastics more than 20 centimeters (approximately 8 inches)
-           large floating on the ocean's surface" (Greenpeace).
-   
-        Our team aims to investigate international fishing patterns and fishing activity translates
-         to plastic pollution in our oceans.</h3>
+          Consider removal of this section or further develop after viewing findings</h3>
        
     </div>
 
