--- a/pages/map.html
+++ b/pages/map.html
@@ -20,6 +20,9 @@
     <!-- papaparse-->
     <script src="../js/papaparse.min.js"></script>
 
+    <!-- classy brew -->
+	<script src="../js/classybrew.js"></script>
+
 
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -56,37 +59,37 @@
                 </div>
             </div>
         </div>
-        </div>
+    </div>
 
-        <div class="title">
-            <p
-                style="text-align: center; margin-bottom: 150px; font-size: 40px;font-family: sans-serif; font-weight: bold;  background-color: rgb(17, 22, 22);color: cadetblue;">
-                Mapping Plastic Pollution
-            </p>
-        </div>
+    <div class="title">
+        <p
+            style="text-align: center; margin-bottom: 150px; font-size: 40px;font-family: sans-serif; font-weight: bold;  background-color: rgb(17, 22, 22);color: cadetblue;">
+            Mapping Plastic Pollution
+        </p>
+    </div>
 
-        <div class="sidebar">
-            <h2>sidebar title</h2>
-            some text
-        </div>
+    <div class="sidebar">
+        <h2>sidebar title</h2>
+        some text
+    </div>
 
-        <div class="content">
-            <div id="map"> </div>
-        </div>
+    <div class="content">
+        <div id="map"> </div>
+    </div>
 
-        <div class="dashboard">
-            bar chart dashboard
-        </div>
+    <div class="dashboard">
+        bar chart dashboard
+    </div>
 
-        <div class="text">
-            <p
-                style="margin: 20px; font-size: 20px; font-family: sans-serif; background-color: rgb(17, 22, 22); margin-bottom: 20px; color: cadetblue;">
-                Our maps can be navigated by zooming in/out by clicking the +/- or by clicking on a cluster, and by grab
-                & holding the map to change viewing locations. To show data on the map, click the “Layers” icon on the
-                top right to filter data as needed.
-            </p>
-        </div>
-        <script src="../js/map.js"></script>
+    <div class="text">
+        <p
+            style="margin: 20px; font-size: 20px; font-family: sans-serif; background-color: rgb(17, 22, 22); margin-bottom: 20px; color: cadetblue;">
+            Our maps can be navigated by zooming in/out by clicking the +/- or by clicking on a cluster, and by grab
+            & holding the map to change viewing locations. To show data on the map, click the “Layers” icon on the
+            top right to filter data as needed.
+        </p>
+    </div>
+    <script src="../js/map.js"></script>
 
 </body>
 
