--- a/pages/map.html
+++ b/pages/map.html
@@ -28,6 +28,14 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
+        <!-- apex charts -->
+	<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+
+	<!-- js-grid -->
+	<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
+	<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
+
 
 </head>
 
@@ -37,7 +45,7 @@
         <div class="navbar">
             <a href="../pages/home.html">Home</a>
             <a href="data.html">Data</a>
-            <a href="vessel.html">Fishing Vessels and Plastic Pollution</a>
+            <a href="map.html">Map</a>
             <div class="dropdown">
                 <button class="dropbtn">Make a Difference
                     <i class="fa fa-caret-down"></i>
@@ -77,9 +85,7 @@
         <div id="map"> </div>
     </div>
 
-    <div class="dashboard">
-        bar chart dashboard
-    </div>
+    <div class="dashboard"></div>
 
     <div class="text">
         <p
@@ -89,7 +95,7 @@
             top right to filter data as needed.
         </p>
     </div>
-    <script src="../js/map.js"></script>
+    <script src="../js/map2.js"></script>
 
 </body>
 
