--- a/pages/team.html
+++ b/pages/team.html
@@ -16,7 +16,7 @@
         <div class="navbar">
           <a href="home.html">Home</a>
           <a href="data.html">Data</a>
-          <a href="vessel.html">Fishing Vessels and Plastic Pollution</a>
+          <a href="map.html">Map</a>
           <div class="dropdown">
             <button class="dropbtn">Make a Difference
               <i class="fa fa-caret-down"></i>
