--- a/landing.html
+++ b/landing.html
@@ -23,11 +23,16 @@
     <div class="content">
 
         <div id="quiz">
-            What is the greatest contributor to plastic pollutants in the ocean? <br><br><br>
-            <button id="myBtn1" class="button" type="button">Industrial Waste</button> <br>
-            <button id="myBtn2" class="button" type="button">Consumer Plastics</button> <br>
-            <button id="myBtn3" class="button" type="button">Fishing Gear</button> <br>
-            <button id="myBtn4" class="button" type="button">Restaurant Takeout</button>
+            <br>
+            <br>
+            <br>
+            At least how many tons of plastic are released into the ocean each year?
+            
+         <br><br><br>
+            <button id="myBtn1" class="button" type="button">650 kilograms</button> <br>
+            <button id="myBtn2" class="button" type="button">1 ton</button> <br>
+            <button id="myBtn3" class="button" type="button">8 tons</button> <br>
+            <button id="myBtn4" class="button" type="button">0.5 megatons</button>
         </div>
     </div>
 
