--- a/landing.html
+++ b/landing.html
@@ -26,9 +26,10 @@
             <br>
             <br>
             <br>
+            <p style = "margin: 7.5%;">
             At least how many tons of plastic are released into the ocean each year?
-            
-         <br><br><br>
+            </p>
+         <br>
             <button id="myBtn1" class="button" type="button">650 kilograms</button> <br>
             <button id="myBtn2" class="button" type="button">1 ton</button> <br>
             <button id="myBtn3" class="button" type="button">8 tons</button> <br>
