--- a/pages/home.html
+++ b/pages/home.html
@@ -91,6 +91,9 @@
       plastic waste mismanagement.
     </p>
     <br>
+    <!--<form action="https://juliawood1.github.io/DH151/Week9/index.html">
+      <input type="submit" value="Get Started" />
+  </form>/*-->
    <button class="button" type="button"> Get Started</button>
   </div>
   <div class="content">
