--- a/landing.html
+++ b/landing.html
@@ -32,7 +32,7 @@
          <br>
             <button id="myBtn1" class="button" type="button">650 kilograms</button> <br>
             <button id="myBtn2" class="button" type="button">1 ton</button> <br>
-            <button id="myBtn3" class="button" type="button">8 tons</button> <br>
+            <button id="myBtn3" class="button" type="button">8 Million tons</button> <br>
             <button id="myBtn4" class="button" type="button">0.5 megatons</button>
         </div>
     </div>
