--- a/pages/team.html
+++ b/pages/team.html
@@ -2,86 +2,96 @@
 <html>
 
 <head>
-    <title>Start page</title>
-    <meta charset="utf-8" />
+  <title>Start page</title>
+  <meta charset="utf-8" />
 
-    <!-- style sheets -->
-    <link rel="stylesheet" href="../css/team.css">
+  <!-- style sheets -->
+  <link rel="stylesheet" href="../css/team.css">
 
 </head>
 
 <body>
 
-    <div class="header">
-        <div class="navbar">
-          <a href="home.html">Home</a>
-          <a href="data.html">Data</a>
-          <a href="map.html">Map</a>
-          <div class="dropdown">
-            <button class="dropbtn">Make a Difference
-              <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-              <a href="leg.html">Propositions</a>
-              <a href="#">Other Organizations</a>
-              <a href="#">What Next?</a>
-            </div>
-          </div>
-          <div class="dropdown">
-            <button class="dropbtn">About
-              <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-              <a href="team.html">Meet the Team</a>
-              <a href="#">About the Project</a>
-              <a href="#">Map Instructions</a>
-            </div>
-          </div>
+  <div class="header">
+    <div class="navbar">
+      <a href="home.html">Home</a>
+      <a href="data.html">Data</a>
+      <a href="map.html">Map</a>
+      <div class="dropdown">
+        <button class="dropbtn">Make a Difference
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="leg.html">Propositions</a>
+          <a href="#">Other Organizations</a>
+          <a href="#">What Next?</a>
         </div>
+      </div>
+      <div class="dropdown">
+        <button class="dropbtn">About
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="team.html">Meet the Team</a>
+          <a href="#">About the Project</a>
+        </div>
+      </div>
+    </div>
 
     <div class="content">
-        <h1 style="text-align: center; font-size: 80px;  font-family: 'Montserrat', sans-serif;
+      <h1 style="text-align: center; font-size: 80px;  font-family: 'Montserrat', sans-serif;
         font-weight: 800; letter-spacing: -2px; margin-top: 100px; margin-bottom: -10px; color: rgb(0, 38, 88);">
-          Hi, We're the Ocean Pollution Posse.</h1> <br>
+        Hi, We're the Ocean Pollution Posse.</h1> <br>
 
-        <h3 style = "font-size: 25px; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px; text-align: left;">
-             Our mission this quarter is to analyze which countries are polluting the most plastic into our oceans. 
-             We hope to also find out whether there is a relationship between Gross Domestic Product (GDP) and the amount of mismanaged plastic waste. 
-             By discovering which countries are the greatest contributors, we can then learn about why that is and what steps can be done to either reduce plastic pollution or manage plastic waste properly.
-              </h3>
-        <br>
-        <h2 style="text-align: center; font-size: 50px;  font-family: 'Montserrat', sans-serif;
+      <h3
+        style="font-size: 25px; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px; text-align: left;">
+        Our mission this quarter is to analyze which countries are polluting the most plastic into our oceans.
+        We hope to also find out whether there is a relationship between Gross Domestic Product (GDP) and the amount of
+        mismanaged plastic waste.
+        By discovering which countries are the greatest contributors, we can then learn about why that is and what steps
+        can be done to either reduce plastic pollution or manage plastic waste properly.
+      </h3>
+      <br>
+      <h2 style="text-align: center; font-size: 50px;  font-family: 'Montserrat', sans-serif;
         font-weight: 800; letter-spacing: -2px; margin-top: 5%; margin-bottom: 7% ; color: rgb(0, 38, 88);">
-          Meet the Team!</h2>
-        <div class="clearfix">
-        <img align="left" style = "float: left; margin-right: 5%; margin-bottom: 5%;"  width="200" src="../photos/kelseyselfiesmall_img.jpg">
-        <h3 style = "font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
+        Meet the Team!</h2>
+      <div class="clearfix">
+        <img align="left" style="float: left; margin-right: 5%; margin-bottom: 5%;" width="200"
+          src="../photos/kelseyselfiesmall_img.jpg">
+        <h3
+          style="font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
           Hi, I'm Julia Wood and I will be the data visualization specialist for our team.
           I will also conduct data analysis and help put our website together.
           I am really looking forward to working on this project because I am passionate
-           about protecting our oceans and uncovering spatial trends using web mapping! </h3> </div>
-        <div class="clearfix">
-        <img align="left" style = "float: left; margin-right: 5%; margin-bottom: 5%;" width="200" src="../photos/me2.jpg">
-        <h3 style = "font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">I'm Eli and I will be the web specialist for our team.
-             I will be managing the functionality of our site, writing and reviewing code, 
-             and helping out the team with other aspects of the project as needed.</h3>
-        </div>
-        <div class="clearfix">
-        <img align="left" style = "float: left;  margin-right: 5%; margin-bottom: 5%;" width="200" src="../photos/IMG_2368.jpg">
-        <h3 style = " font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
-            Hello! I'm Derek and I will be the UX designer for our team.
-             In addition to designing the site, I plan to help construct
-              a compelling narrative and plan to implement Python interactive
-               mapping knowledge from DH140. I hope to discover exciting, new findings with the team!</h3>
-        </div>
-        
-        <h2 style="text-align: center; font-size: 50px;  font-family: 'Montserrat', sans-serif;
+          about protecting our oceans and uncovering spatial trends using web mapping! </h3>
+      </div>
+      <div class="clearfix">
+        <img align="left" style="float: left; margin-right: 5%; margin-bottom: 5%;" width="200" src="../photos/me2.jpg">
+        <h3
+          style="font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
+          I'm Eli and I will be the web specialist for our team.
+          I will be managing the functionality of our site, writing and reviewing code,
+          and helping out the team with other aspects of the project as needed.</h3>
+      </div>
+      <div class="clearfix">
+        <img align="left" style="float: left;  margin-right: 5%; margin-bottom: 5%;" width="200"
+          src="../photos/IMG_2368.jpg">
+        <h3
+          style=" font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
+          Hello! I'm Derek and I will be the UX designer for our team.
+          In addition to designing the site, I plan to help construct
+          a compelling narrative and plan to implement Python interactive
+          mapping knowledge from DH140. I hope to discover exciting, new findings with the team!</h3>
+      </div>
+
+      <h2 style="text-align: center; font-size: 50px;  font-family: 'Montserrat', sans-serif;
         font-weight: 800; letter-spacing: -2px; margin-top: 5%; margin-bottom: 7% ; color: rgb(0, 38, 88);">
         Project Overview
-        </h2>
-        <h3 style = " font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
-          Consider removal of this section or further develop after viewing findings</h3>
-       
+      </h2>
+      <h3
+        style=" font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
+        Consider removal of this section or further develop after viewing findings</h3>
+
     </div>
 
 </body>
