--- a/pages/map.html
+++ b/pages/map.html
@@ -21,20 +21,21 @@
     <script src="../js/papaparse.min.js"></script>
 
     <!-- classy brew -->
-	<script src="../js/classybrew.js"></script>
+    <script src="../js/classybrew.js"></script>
 
 
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-        <!-- apex charts -->
-	<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <!-- apex charts -->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
-	<!-- js-grid -->
-	<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
-	<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
+    <!-- js-grid -->
+    <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
+    <link type="text/css" rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
 
 
 </head>
@@ -63,7 +64,6 @@
                 <div class="dropdown-content">
                     <a href="team.html">Meet the Team</a>
                     <a href="#">About the Project</a>
-                    <a href="#">Map Instructions</a>
                 </div>
             </div>
         </div>
