--- a/pages/map.html
+++ b/pages/map.html
@@ -71,7 +71,7 @@
 
     <div class="title">
         <p
-            style="text-align: center; margin-bottom: 150px; font-size: 40px;font-family: sans-serif; font-weight: bold;  background-color: rgb(17, 22, 22);color: cadetblue;">
+            style="text-align: center; margin-bottom: 150px; font-size: 200%;font-family: sans-serif; font-weight: bold;  background-color: rgb(17, 22, 22);color: cadetblue;">
             Mapping Plastic Pollution
         </p>
     </div>
