--- a/pages/home.html
+++ b/pages/home.html
@@ -90,11 +90,7 @@
       plastic waste mismanagement.
     </p>
     <br>
-    <!--<form action="https://juliawood1.github.io/DH151/Week9/index.html">
-      <input type="submit" value="Get Started" />
-  </form>/*-->
-    <button class="button" type="button"> Get Started</button>
-  </div>
+    <button onclick = "window.location.href = 'https://eliaranita1.github.io/project1/pages/map.html';" class="button" type="button"> Get Started</button>
   <div class="content">
 
   </div>
