--- a/pages/map.html
+++ b/pages/map.html
@@ -83,7 +83,16 @@
         <div id="map"> </div>
     </div>
 
-    <div class="dashboard"></div>
+    <div class="dashboard">
+        <div class="chart"></div>
+        <div id="ranks">
+            <div style="width:100%;">
+                <div style="width:100px;height: 100px; float:left;margin-left: 15%;   border: 2px solid black;font-size: 20px;">GDP Rank<div id='gdp' style= 'font-size: 35px; text-align: center;'></div></div>
+                <div style="width:100px;height:100px; float:right; margin-right: 15%; border: 2px solid black;font-size: 20px;">Pollution Rank<div id='pol' style= 'font-size: 35px;text-align: center;'></div></div>
+                <div style="clear: both;"></div>
+            </div>
+        </div>
+    </div>
 
     <div class="text">
         <p
