--- a/pages/map.html
+++ b/pages/map.html
@@ -63,7 +63,7 @@
                 </button>
                 <div class="dropdown-content">
                     <a href="team.html">Meet the Team</a>
-                    <a href="#">About the Project</a>
+                    <a href="about.html">About the Project</a>
                 </div>
             </div>
         </div>
