--- a/pages/map.html
+++ b/pages/map.html
@@ -53,8 +53,8 @@
                 </button>
                 <div class="dropdown-content">
                     <a href="leg.html">Propositions</a>
-                    <a href="#">Other Organizations</a>
-                    <a href="#">What Next?</a>
+                    <a href="https://blueocean.net/plastic-pollution-resources-organizations-making-our-seas-plastic-free/">
+                        Other Organizations</a>
                 </div>
             </div>
             <div class="dropdown">
