--- a/pages/orgs.html
+++ b/pages/orgs.html
@@ -23,8 +23,7 @@
         </button>
         <div class="dropdown-content">
           <a href="leg.html">Propositions</a>
-          <a href="https://blueocean.net/plastic-pollution-resources-organizations-making-our-seas-plastic-free/">
-            Other Organizations</a>
+          <a href="orgs.html">Other Organizations</a>
         </div>
       </div>
       <div class="dropdown">
@@ -42,11 +41,13 @@
 
       <h2 style="text-align: center; font-size: 50px;  font-family: 'Montserrat', sans-serif;
         font-weight: 800; letter-spacing: -2px; margin-top: 5%; margin-bottom: 7% ; color: rgb(0, 38, 88);">
-        Project Overview
+        Other Organizations Helping To Fight Plastic Pollution
       </h2>
       <h3
-        style=" font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif; font-weight: 300; text-indent: 100px;">
-        We were motivated to look into plastic waste by country following the rising threat of plastic to our oceans. While this map cannot give us all the information about how plastic waste ends up in the ocean, it can give us insight into which countries may contribute most to the plastic waste in our oceans. The leading research question of our project was, how are GDP and mismanaged plastic waste related? We investigated this question in grand totals as well as in  relation to population. Furthermore, we researched our results, and found that countries with high GDPs and low mismanaged plastic waste actually escaped the  blame of plastic pollution by exporting their plastic waste to China (which is why you see such a large number of mismanaged plastic waste in tons from China).</h3>
+        style=" font-size: 25px;  text-align: left; font-family: 'Source Sans Pro', sans-serif;
+         font-weight: 300; text-indent: 100px;">
+         
+        </h3>
 
     </div>
 
